--- a/soy-http/pom.xml
+++ b/soy-http/pom.xml
@@ -2,16 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>soy-parent</artifactId>
+        <groupId>com.smzdm</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.smzdm</groupId>
-    <artifactId>soy-parent</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>soy-common</module>
-        <module>soy-http</module>
-    </modules>
+    <artifactId>soy-http</artifactId>
 
 
 </project>
