--- a/soy-consumer/pom.xml
+++ b/soy-consumer/pom.xml
@@ -9,14 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>soy-http</artifactId>
+    <artifactId>soy-consumer</artifactId>
 
 
-    <dependencies>
-        <dependency>
-            <groupId>com.smzdm</groupId>
-            <artifactId>soy-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
 </project>
