--- a/soy-example/pom.xml
+++ b/soy-example/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>soy-example</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.smzdm</groupId>
+            <artifactId>soy-consumer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
