--- a/soy-example/pom.xml
+++ b/soy-example/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>soy-consumer</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.smzdm</groupId>
+            <artifactId>soy-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
