--- a/soy-http/pom.xml
+++ b/soy-http/pom.xml
@@ -18,5 +18,10 @@
             <artifactId>soy-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
     </dependencies>
 </project>
