--- a/soy-common/pom.xml
+++ b/soy-common/pom.xml
@@ -22,6 +22,11 @@
             <version>3.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.dianping.cat</groupId>
+            <artifactId>cat-client</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
