--- a/soy-example/pom.xml
+++ b/soy-example/pom.xml
@@ -14,9 +14,16 @@
     <dependencies>
         <dependency>
             <groupId>com.smzdm</groupId>
-            <artifactId>soy-consumer</artifactId>
+            <artifactId>soy-invoker</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.smzdm</groupId>
+            <artifactId>soy-http</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>com.smzdm</groupId>
             <artifactId>soy-common</artifactId>
