--- a/soy-http/pom.xml
+++ b/soy-http/pom.xml
@@ -19,6 +19,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.smzdm</groupId>
+            <artifactId>soy-invoker</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
@@ -33,5 +38,6 @@
             <artifactId>gson</artifactId>
             <version>2.7</version>
         </dependency>
+
     </dependencies>
 </project>
