--- a/soy-invoker/pom.xml
+++ b/soy-invoker/pom.xml
@@ -9,17 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>soy-consumer</artifactId>
+    <artifactId>soy-invoker</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.smzdm</groupId>
             <artifactId>soy-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.smzdm</groupId>
-            <artifactId>soy-http</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
